Updated index.html and CSS styles.css
Modified the content of index.html and initialize styles.css

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 
         <main>
             <section class="hero">
+                <img class="hero-bg" src="https://images.pexels.com/photos/2290070/pexels-photo-2290070.jpeg" alt="Cafe interior. Photo by Waldemar Brandt: https://www.pexels.com/photo/dining-area-of-the-building-with-no-people-2290070/">
                 <h1>Le Blanc</h1>
                 <p>"Where every cup is a masterpiece"</p>
-                <button type="button" href="menu.html">Explore Our Menu</button>
+                <a href="menu.html" class="hero-button">Explore Our Menu</a>
             </section>
 
             <section class="about">
@@ -39,10 +40,11 @@
                 <p>At Le Blanc, we believe coffee is more than just a drink—it&apos;s an experience.</p>
                 <p>Our baristas craft each cup with precision, using beans sourced from sustainable farms worldwide.</p>
                 <p>Paired with artisan pastries and a refined atmosphere, Le Blanc is your escape from the ordinary.</p>
+                
             </section>
 
             <section class="highlights">
-                <h2>Highlighs</h2>
+                <h2>Highlights</h2>
 
                 <div class="highlight-menus">
                     <div class="highligh-menu">
