Initialized content for menu.html

--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,28 @@
         </nav>
 
         <main>
+            <div id="nav-tabs">
+                <input type="radio" id="tab-all" name="tab" checked>
+                <label for="tab-all">All</label>
+
+                <input type="radio" id="tab-coffee" name="tab">
+                <label for="tab-coffee">Coffee</label>
+
+                <input type="radio" id="tab-specialty" name="tab">
+                <label for="tab-specialty">Specialty</label>
+
+                <input type="radio" id="tab-pastries" name="tab">
+                <label for="tab-pastries">Pastries</label>
+
+                <input type="radio" id="tab-brunch" name="tab">
+                <label for="tab-brunch">Brunch</label>
+
+                <input type="radio" id="tab-tea" name="tab">
+                <label for="tab-tea">Tea</label>
+
+                <input type="radio" id="tab-wine" name="tab">
+                <label for="tab-wine">Wine</label>
+            </div>
         </main>
 
         <footer>
