--- a/contacts.html
+++ b/contacts.html
@@ -23,11 +23,40 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contacts.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
+            <section class="address-details">
+                <h1>Contact Details</h1>
+                <p>We’d love to hear from you — whether for reservations, partnerships, or feedback.</p>
+
+                <div>
+                    <address>
+                        <div>
+                            <h2>Address</h2>
+                            <p>123 Elegance Street, Makati City, Philippines</p>
+                        </div>
+
+                        <div>
+                            <h2>Phone</h2>
+                            <p>+63 912 345 6789</p>
+                        </div>
+
+                        <div>
+                            <h2>Email</h2>
+                            <p><a href="mailto:contact@leblanc.com" target="_blank">contact@leblanc.com</a></p>
+                        </div>
+
+                        <div>
+                            <h2>Operating Hours</h2>
+                            <p>Monday - Sunday</p>
+                            <p>6:00 AM - 8:00 PM</p>
+                        </div>
+                    </address>
+                </div>
+            </section>
         </main>
 
         <footer>
