--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contacts.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
             <section class="hero">
-                <img class="hero-bg" src="https://images.pexels.com/photos/2290070/pexels-photo-2290070.jpeg" alt="Cafe interior. Photo by Waldemar Brandt: https://www.pexels.com/photo/dining-area-of-the-building-with-no-people-2290070/" loading="lazy">
+                <img class="hero-bg" src="https://images.pexels.com/photos/2290070/pexels-photo-2290070.jpeg" alt="Cafe interior. Photo by Waldemar Brandt: https://www.pexels.com/photo/dining-area-of-the-building-with-no-people-2290070/" loading="eager">
                 <h1>Le Blanc</h1>
                 <p>"Where every cup is a masterpiece"</p>
                 <a href="menu.html" class="hero-button">Explore Our Menu</a>
