--- a/contacts.html
+++ b/contacts.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
-                <li><a href="contacts.html">Contact</a></li>
+                <li><a class="active" href="contacts.html">Contact</a></li>
             </ul>
         </nav>
 
