--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </label>
 
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="contacts.html">Contact</a></li>
