--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
 
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
+                <li><a class="active" href="menu.html">Menu</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="contacts.html">Contact</a></li>
             </ul>
