Completed responsiveness for other device sizes

--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Le Blanc</title>
+        <title>Le Blanc - Contacts</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Where every cup is a masterpiece">
         <link rel="stylesheet" href="./static/styles.css">
